[gd_scene load_steps=4 format=3 uid="uid://3rdjvm5d8yo"]

[ext_resource type="Script" path="res://scripts/Tale.gd" id="1_28lsr"]
[ext_resource type="Texture2D" uid="uid://d08ce57s1pjt" path="res://assets/woodTexture.png" id="2_k3hjj"]
[ext_resource type="Theme" uid="uid://vhiqa4vo0evm" path="res://themes/titleTheme.tres" id="2_kbbd3"]

[node name="Tale" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28lsr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k3hjj")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 75.0
offset_top = 54.0
offset_right = -78.0
offset_bottom = 110.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_kbbd3")
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.5
offset_top = -514.0
offset_right = 315.5
offset_bottom = 514.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
clip_contents = false
layout_mode = 2

[node name="DialogueVB" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="UploadResult" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="UploadResult" to="." method="_on_upload_result_request_completed"]
